@@ -7,31 +7,26 @@ import org.junit.runner.RunWith;
 import com.carrotsearch.randomizedtesting.RandomizedRunner;
 
 import java.io.IOException;
-import java.io.Reader;
 import java.util.Set;
 import java.util.List;
-import java.util.Arrays;
 
 import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.analysis.Tokenizer;
 import org.apache.lucene.analysis.TokenFilter;
-import org.apache.lucene.analysis.TokenStream;
 import org.apache.lucene.analysis.core.WhitespaceTokenizer;
 import static org.apache.lucene.analysis.BaseTokenStreamTestCase.assertAnalyzesTo;
-
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.ImmutableList;
 
 
 @RunWith(RandomizedRunner.class)
 public class Jmorphy2StemFilterTest extends BaseFilterTestCase {
-    private static List<Set<String>> DEFAULT_INCLUDE_TAGS =
-        ImmutableList.<Set<String>>of(ImmutableSet.of("NOUN"),
-                                      ImmutableSet.of("ADJF"),
-                                      ImmutableSet.of("ADJS"),
-                                      ImmutableSet.of("LATN"),
-                                      ImmutableSet.of("NUMB"),
-                                      ImmutableSet.of("UNKN"));
+    private static final List<Set<String>> DEFAULT_INCLUDE_TAGS = List.of(
+        Set.of("NOUN"),
+        Set.of("ADJF"),
+        Set.of("ADJS"),
+        Set.of("LATN"),
+        Set.of("NUMB"),
+        Set.of("UNKN")
+    );
 
     @Before
     public void setUp() throws IOException {
@@ -89,7 +84,7 @@ public class Jmorphy2StemFilterTest extends BaseFilterTestCase {
  
     @Test
     public void testIgnoreUnknown() throws IOException {
-        List<Set<String>> excludeUnknown = ImmutableList.<Set<String>>of(ImmutableSet.of("UNKN"));
+        List<Set<String>> excludeUnknown = List.of(Set.of("UNKN"));
         Analyzer analyzer = getAnalyzer(null, excludeUnknown, true);
         assertAnalyzesTo(analyzer,
                          "ъь ъё",
